1. shrink arrow in scroll up btn 2. add @media orientation ladscape to make sure the description content will be displayed covering whole available space on the screen (eariler was very small)

--- a/src/style/components/scrl_up_btn.scss
+++ b/src/style/components/scrl_up_btn.scss
@@ -17,8 +17,8 @@
     }
     & > .arrow-class {
         @include general_arrow_btn($font-hover, $main-bkg);
-        height: 1.5rem;
-        width: 1.5rem;
+        height: .5rem;
+        width: .5rem;
         left: .2rem;
         bottom: .2rem;
         transform: rotate(-90deg);
